reformatted env02 code structure
reformatted the html structure for env02 as i will be using this in the future so its smarter/better for future additions.

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <ol>
                 <li>Links to my enviroments</li>
                 <li><a href="environ/env01.html">enviroment 1, "late night"</a></li>
+                <li><a href="environ/env02.html">enviroment 2, "pages to be collected"</a></li>
             </ol>
         </div>
 
