--- a/environ/env02.html
+++ b/environ/env02.html
@@ -19,8 +19,8 @@
         </div>
             
         <div class="slender_text">
-        <p class="slender_abovewindow">collect my pages</p>
-        <p class="slender_neartree">have you seen my pages</p>
+        <p class="slender_abovewindow">i'm slender man!</p>
+        <p class="slender_neartree">find my pages!</p>
         <p class="slender_belowwindow"></p>
         </div>
     
