finished final draft of lab2

--- a/environ/env02.html
+++ b/environ/env02.html
@@ -12,10 +12,13 @@
     <div class="layer">
         
         <div class="jimbo_text">
-            <p id="jimbo_abovetv"> stay up</p>
+            <p id="jimbo_abovetv">play me</p>
             <p id="jimbo_belowtv">play me</p>
-            <p id="jimbo_text3">over here</p>
-            <p id="jimbo_text4">stay up</p>
+            <p id="jimbo_text3">play me</p>
+            <p id="jimbo_text4">play me</p>
+            <p id="jimbo_righttv">play me</p>
+            <p id="jimbo_lefttv">play me</p>
+
         </div>
             
         <div class="slender_text">
