--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 <li>Links to my enviroments</li>
                 <li><a href="environ/env01.html">enviroment 1, "late night"</a></li>
                 <li><a href="environ/env02.html">enviroment 2, "pages to be collected"</a></li>
+                <li><a href="environ/env03.html">enviroment 2, "I'm slender man"</a></li>
             </ol>
         </div>
 
