--- a/environ/env04.html
+++ b/environ/env04.html
@@ -4,11 +4,11 @@
 
 <head>
     <title>hey its me slender man</title>
-    <link href="env03.css" rel="stylesheet" type="text/css">
+    <link href="env04.css" rel="stylesheet" type="text/css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <script src="env03.js" defer></script>
+    <script src="env04.js" defer></script>
 </head>
 
 <body>
@@ -41,5 +41,7 @@
 
 
     </div>
+    <div id="random-image-layer">    </div>
+      
 </body>
 </html>
