--- a/exercises/ex02.html
+++ b/exercises/ex02.html
@@ -22,7 +22,7 @@
         <li class="Polychrome">Peach Pink</li>
         <li class="Polychrome">Hot Pink</li>
     </ul>
-<img src="car.jpg" alt="erm"/>
+<img src="car" alt="erm"/>
     
 </body>
 
