--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
                 <li><a href="environ/env01.html">enviroment 1, "late night"</a></li>
                 <li><a href="environ/env02.html">enviroment 2, "pages to be collected"</a></li>
                 <li><a href="environ/env03.html">enviroment 3, "I'm slender man"</a></li>
+                <li><a href="environ/env04.html">enviroment 4, "collect my pages"</a></li>
+                <li><a href="environ/env05.html">enviroment 5, "placeholder"</a></li>
+                <li><a href="environ/env06.html">enviroment 6, "placeholder"</a></li>
+                <li><a href="environ/env07.html">enviroment 7, "placeholder"</a></li>
+                <li><a href="environ/env08.html">enviroment 8, "placeholder"</a></li>
             </ol>
         </div>
 
