update title of website  of env04

--- a/environ/env04.html
+++ b/environ/env04.html
@@ -3,7 +3,7 @@
 
 
 <head>
-    <title>hey its me slender man</title>
+    <title>collect my pages</title>
     <link href="env04.css" rel="stylesheet" type="text/css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
