updated index with ex06

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <li>Links to my follow-along exercises</li>
                 <li><a href="exercises/ex01.html">exercise 1</a></li>
                 <li><a href="exercises/ex02.html">exercise 2</a></li>
+                <li><a href="exercises/ex06.html">group audio addition</a></li>
             </ol>
         </div>
 
